implement whitelist for rider to riders

--- a/main.ipynb
+++ b/main.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,29 +216,37 @@
     "Assign riders who should ride together\n",
     "'''\n",
     "rider_groups = [\n",
-    "    {\"aaron duong\", \"Emily Yang\"},\n",
+    "    {\"Joann\", \"Grace Sowon Park \"},\n",
     "]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_assignment(assignments): #driver to list of rider object\n",
-    "    print(\"\\nPrinting assignments\")\n",
-    "    for driver, passengers in assignments.items():\n",
-    "        print(f\"\\n{driver.name}\")\n",
-    "        for person in passengers:\n",
-    "            print(person.name)\n",
-    "\n"
+    "def print_assignment(assignments): # driver to list of rider object\n",
+    "    for driver, riders in assignments.items():\n",
+    "        print(f\"\\nDriver: {driver.name} {driver.pickup_location.split()[0]}\")\n",
+    "        for rider in riders:\n",
+    "            print(rider.name, rider.pickup_location.split()[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Amount of distinct locations drivers should have to pick up from\n",
+    "MAXIMUM_LOCATION_THRESHOLD = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +308,7 @@
     "    for rider in riders:\n",
     "        rider_name_to_object[rider.name] = rider\n",
     "\n",
-    "     # Assign passengers who need to ride with a specific driver\n",
+    "    # Assign passengers who need to ride with a specific driver\n",
     "    for driver_name, required_rider_names in driver_required_riders.items():\n",
     "        time = driver_name_to_object[driver_name].service_type\n",
     "        possible_riders = riders_by_time[time]\n",
@@ -312,6 +320,31 @@
     "                unassigned_riders.remove(rider)\n",
     "                driver.amount_seats -= 1\n",
     "        # print_assignment(assignments)\n",
+    "\n",
+    "    \n",
+    "    # Assign groups of riders.\n",
+    "    # List of list of riders objects\n",
+    "    rider_groups_obs = []\n",
+    "    for group in rider_groups:\n",
+    "        group_obs = [rider_name_to_object[rider_name] for rider_name in group]\n",
+    "        rider_groups_obs.append(group_obs)\n",
+    "\n",
+    "    for group in rider_groups_obs:\n",
+    "        if all(r in unassigned_riders for r in group):\n",
+    "            for driver in drivers:\n",
+    "                if driver.amount_seats < len(group):\n",
+    "                    continue\n",
+    "\n",
+    "                combined_group = assignments[driver] + group\n",
+    "                total_locations = {r.pickup_location for r in combined_group}\n",
+    "                if len(total_locations) <= MAXIMUM_LOCATION_THRESHOLD:\n",
+    "                    assignments[driver].extend(group)\n",
+    "                    for r in group:\n",
+    "                        unassigned_riders.remove(r)\n",
+    "                    driver.amount_seats -= len(group)\n",
+    "                    break\n",
+    "\n",
+    "\n",
     "    \n",
     "    # Greedily assign passengers to drivers.\n",
     "    for driver in drivers:\n",
@@ -321,14 +354,14 @@
     "        possible_riders = riders_by_time[time]\n",
     "\n",
     "        found_set = False\n",
-    "        # Try forming groups of size 4 → then 3 → then 2 → then 1\n",
+    "        # Try forming groups of the amount that the passenger can hold all the way down to 0 passengers.\n",
     "        for group_size in range(driver.amount_seats, 0, -1):\n",
     "            if found_set:\n",
     "                break\n",
     "            for group in combinations(possible_riders, group_size):\n",
     "                combined_group = list(group) + assignments[driver]\n",
     "                locations = {r.pickup_location for r in combined_group} \n",
-    "                if len(locations) <= 2 and all(r in unassigned_riders for r in group):\n",
+    "                if len(locations) <= MAXIMUM_LOCATION_THRESHOLD and all(r in unassigned_riders for r in group):\n",
     "                    assignments[driver].extend(group)\n",
     "                    for r in group:\n",
     "                        unassigned_riders.remove(r)\n",
@@ -342,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -352,54 +385,54 @@
       "\n",
       "Driver: Josh Paik Off\n",
       "Jacob Lei Off\n",
-      "Christina Ko Life\n",
-      "JJ Lee Life\n",
-      "Rebecca Lu Off\n",
+      "Josh Yang Off\n",
+      "Sam Ko  Off\n",
+      "Kyle Hwang South\n",
       "\n",
       "Driver: Ric Chang Off\n",
       "Karina Pan Off\n",
-      "Khang Le Off\n",
-      "Aimy Pham North\n",
-      "Austin Lee Off\n",
+      "Elise Cho South\n",
+      "Derek Liang  South\n",
+      "Jeff Jiang Off\n",
       "\n",
       "Driver: Oriana Tang Off\n",
       "Grace Park Life\n",
       "\n",
       "Driver: Jacob Deadlifts Off\n",
+      "Joann South\n",
+      "Grace Sowon Park  South\n",
       "Susanna Tang North\n",
       "Emily Yang North\n",
-      "Logan golia North\n",
-      "Benjamin Kim South\n",
       "\n",
       "Driver: Jack Havemann Life\n",
-      "Aaron Long Life\n",
+      "Logan golia North\n",
+      "Benjamin Kim South\n",
       "David Zhu South\n",
-      "Nathanael Wang Life\n",
-      "Ella lu South\n",
+      "helena song North\n",
       "\n",
       "Driver: Matthew Ahn Off\n",
-      "helena song North\n",
+      "Aaron Long Life\n",
+      "Nathanael Wang Life\n",
+      "Ella lu South\n",
       "Hannah Zhang South\n",
-      "Jay Jung North\n",
-      "Gabriel Ni North\n",
       "\n",
       "Driver: Daniel Choi Off\n",
+      "Jay Jung North\n",
       "chloe lim Life\n",
       "Ellie Jung  Life\n",
-      "Jeffery Huang South\n",
-      "Sehyun Jung Life\n",
+      "Gabriel Ni North\n",
       "\n",
       "Driver: Olivia Chang Life\n",
+      "Jeffery Huang South\n",
+      "Sehyun Jung Life\n",
       "Taeho Choe  South\n",
       "Phillip Seo Life\n",
-      "Grace Kwon South\n",
-      "Joshua Lee Life\n",
       "\n",
       "Driver: Brian Seo South\n",
-      "Josh Yang Off\n",
+      "Grace Kwon South\n",
+      "Joshua Lee Life\n",
       "Daniel Kuo South\n",
-      "Sam Ko  Off\n",
-      "Kyle Hwang South\n",
+      "Christina Ko Life\n",
       "\n",
       "Driver: Lia Kim Off\n",
       "audrey lee South\n",
@@ -407,36 +440,33 @@
       "Jane Yoo Off\n",
       "\n",
       "Driver: Jonathan Mak North\n",
+      "JJ Lee Life\n",
       "Claire Doh South\n",
       "Hannah Kim South\n",
-      "Darius Ajebon  North\n",
-      "Jiwang Lee North\n",
+      "Ethan Yu Life\n",
       "\n",
       "Driver: Clay Murphy Life\n",
-      "Ethan Yu Life\n",
-      "Melody Hong Life\n",
+      "Rebecca Lu Off\n",
+      "Darius Ajebon  North\n",
       "Seojin Kwon Off\n",
-      "Jeff Jiang Off\n",
+      "Jiwang Lee North\n",
       "\n",
       "Driver: Jocelyn Lee Off\n",
+      "Melody Hong Life\n",
       "Daniel Kim  North\n",
-      "Elise Cho South\n",
-      "Joann South\n",
-      "Derek Liang  South\n",
+      "Aimy Pham North\n",
+      "Angel Koh North\n",
       "\n",
       "Driver: Ellen Kang Life\n",
-      "Angel Koh North\n",
-      "Grace Sowon Park  South\n",
+      "Khang Le Off\n",
+      "Austin Lee Off\n",
       "Israel Haile South\n",
       "Maya Habraken  South\n"
      ]
     }
    ],
    "source": [
-    "for driver, riders in x.items():\n",
-    "    print(f\"\\nDriver: {driver.name} {driver.pickup_location.split()[0]}\")\n",
-    "    for rider in riders:\n",
-    "        print(rider.name, rider.pickup_location.split()[0])\n"
+    "print_assignment(x)\n"
    ]
   }
  ],
