explain how the api algorithm will work

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1551,
+   "execution_count": 1568,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1552,
+   "execution_count": 1569,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1553,
+   "execution_count": 1570,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,6 @@
     "    def __eq__(self, other):\n",
     "        return isinstance(other, Rider) and self.name == other.name\n",
     "\n",
-    "\n",
     "class Rider:\n",
     "    def __init__(self, name, pickup_location, service_type, plans):\n",
     "        self.name = name\n",
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1554,
+   "execution_count": 1571,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1555,
+   "execution_count": 1572,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1556,
+   "execution_count": 1573,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1557,
+   "execution_count": 1574,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1558,
+   "execution_count": 1575,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,8 +161,7 @@
     "    \"Oriana Tang\": {\"Sam Ko\"},\n",
     "    \"Josh Paik\": {\"Jane Yoo\"},\n",
     "    \"Olivia Chang\":  {\"Melody Hong\", \"Christina Ko\"},\n",
-    "    \"Oliviaff Chang\":  {\"Melodffy Hong\", \"Christina Ko\"}\n",
-    "\n",
+    "    \n",
     "}\n",
     "\n",
     "'''\n",
@@ -173,14 +171,13 @@
     "    {\"Austin Lee\", \"Jane Yoo\"},\n",
     "    {\"Lucy Han\", \"Joanna Wei\"},\n",
     "    {\"Shayla Nguyen\", \"Pedro Flores-Teran\"}\n",
-    "   \n",
     "]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1559,
+   "execution_count": 1576,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1560,
+   "execution_count": 1577,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +305,7 @@
       "\n",
       "Driver: Oriana Tang Off\n",
       "Sam Ko Off\n",
-      "김예림 Off\n",
+      "Faith Chen Off\n",
       "April Tong Off\n",
       "\n",
       "Driver: Josh Paik Off\n",
@@ -317,62 +314,62 @@
       "Driver: Olivia Chang Life\n",
       "Christina Ko Life\n",
       "Melody Hong Life\n",
-      "Nathanael Wang Life\n",
       "Grace Park Life\n",
+      "Nathanael Wang Life\n",
       "\n",
       "Driver: david kim Off\n",
       "Pedro Flores-Teran Off\n",
       "Shayla Nguyen Off\n",
-      "Faith Chen Off\n",
       "Austin Lee Off\n",
+      "김예림 Off\n",
       "\n",
       "Driver: Clay Murphy Life\n",
-      "Elie Park South\n",
-      "Hannah Zhang South\n",
       "Aaron duong South\n",
-      "Jiwang Lee South\n",
+      "Ella Lu South\n",
+      "Maya Habraken  South\n",
+      "Grace Kwon South\n",
       "\n",
       "Driver: Ric Chang Off\n",
-      "Joann Jung South\n",
-      "Israel Haile South\n",
-      "Taeho Choe South\n",
-      "Daniel Kuo South\n",
+      "Ella South\n",
+      "Hannah Kim South\n",
+      "Jeffery Huang South\n",
+      "derek liang  South\n",
       "\n",
       "Driver: AZ Ellis South\n",
-      "Sehyun Jung Life\n",
-      "Ethan Yu Life\n",
-      "Joanna Wei Life\n",
-      "JJ Lee Life\n",
+      "Elie Park South\n",
+      "Grace Sowon Park  South\n",
+      "Kyle Hwang South\n",
+      "Benjamin Kim South\n",
       "\n",
       "Driver: Jocelyn Lee Off\n",
-      "Daniel Song North\n",
-      "Lucy Han North\n",
+      "Emily Yang North\n",
       "Jocelyn Youn North\n",
+      "helena song North\n",
       "Darius Ajebon  North\n",
       "\n",
       "Driver: Jenny Sohn North\n",
-      "Emily Yang North\n",
-      "Daniel Kim  North\n",
       "Gabriel Ni North\n",
-      "helena song North\n",
+      "Lucy Han North\n",
+      "Daniel Kim  North\n",
+      "Daniel Song North\n",
       "\n",
       "Driver: Lia kim Off\n",
-      "Grace Sowon Park  South\n",
-      "Grace Kwon South\n",
-      "Benjamin Kim South\n",
-      "Maya Habraken  South\n",
+      "Hyeongjun Son South\n",
+      "Joann Jung South\n",
+      "Daniel Kuo South\n",
+      "Hannah Zhang South\n",
       "\n",
       "Driver: Jack Havemann Life\n",
-      "Hannah Kim South\n",
-      "derek liang  South\n",
-      "Hyeongjun Son South\n",
-      "Kyle Hwang South\n",
+      "Ethan Yu Life\n",
+      "Joanna Wei Life\n",
+      "Sehyun Jung Life\n",
+      "JJ Lee Life\n",
       "\n",
       "Driver: Matthew Ahn Life\n",
-      "Ella Lu South\n",
-      "Ella South\n",
+      "Jiwang Lee South\n",
+      "Israel Haile South\n",
       "Rachel Kim South\n",
-      "Jeffery Huang South\n",
+      "Taeho Choe South\n",
       "\n",
       "Driver: Jonathan Mak North\n"
      ]
@@ -384,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1561,
+   "execution_count": 1578,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1562,
+   "execution_count": 1579,
    "metadata": {},
    "outputs": [
     {
@@ -414,21 +411,21 @@
      "output_type": "stream",
      "text": [
       "46\n",
-      "unassigned riders before using flexible: ['Seojin Kwon', 'Daniel Kim ', 'Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee']\n",
+      "unassigned riders before using flexible: ['Seojin Kwon', 'Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee', 'Daniel Song']\n",
       "Flexible Driver david kim Flexible 💚\n",
       "ddd david kim 4 4\n",
       "ddd david kim 4 4\n",
-      "unassigned riders after using flexible: ['Seojin Kwon', 'Daniel Kim ', 'Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee']\n",
+      "unassigned riders after using flexible: ['Seojin Kwon', 'Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee', 'Daniel Song']\n",
       "Flexible Driver Clay Murphy Flexible 💚\n",
       "ddd Clay Murphy 4 4\n",
       "ddd Clay Murphy 4 4\n",
-      "unassigned riders after using flexible: ['Seojin Kwon', 'Daniel Kim ', 'Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee']\n",
+      "unassigned riders after using flexible: ['Seojin Kwon', 'Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee', 'Daniel Song']\n",
       "Flexible Driver Ric Chang Flexible 💚\n",
       "ddd Ric Chang 4 2\n",
       "Removing rider Seojin Kwon\n",
       "[DEBUG] Ric Chang got 1 riders of plan 'Flexible 💚' — now has 3 total\n",
-      "unassigned riders after using flexible: ['Daniel Kim ', 'Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee']\n",
-      "unassigned riders after using flexible: ['Daniel Kim ', 'Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee']\n"
+      "unassigned riders after using flexible: ['Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee', 'Daniel Song']\n",
+      "unassigned riders after using flexible: ['Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee', 'Daniel Song']\n"
      ]
     }
    ],
@@ -605,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1563,
+   "execution_count": 1580,
    "metadata": {},
    "outputs": [
     {
@@ -617,22 +614,22 @@
       "Elie Park South\n",
       "\n",
       "Driver: david kim Off\n",
-      "Ella Lu South\n",
-      "Hyeongjun Son South\n",
-      "Joann Jung South\n",
-      "Ella South\n",
-      "\n",
-      "Driver: Clay Murphy Life\n",
       "April Tong Off\n",
-      "Sam Ko Off\n",
       "Pedro Flores-Teran Off\n",
       "Shayla Nguyen Off\n",
+      "Sam Ko Off\n",
+      "\n",
+      "Driver: Clay Murphy Life\n",
+      "Joann Jung South\n",
+      "Hyeongjun Son South\n",
+      "Ella Lu South\n",
+      "Ella South\n",
       "\n",
       "Driver: Olivia Chang Life\n",
       "Jiwang Lee South\n",
-      "Hannah Kim South\n",
-      "Grace Sowon Park  South\n",
-      "derek liang  South\n",
+      "Israel Haile South\n",
+      "Rachel Kim South\n",
+      "Aaron duong South\n",
       "\n",
       "Driver: Ric Chang Off\n",
       "Gabriel Ni North\n",
@@ -643,32 +640,32 @@
       "Melody Hong Life\n",
       "\n",
       "Driver: Rebecca Lu Off\n",
-      "Grace Park Life\n",
-      "Sehyun Jung Life\n",
-      "Christina Ko Life\n",
-      "Nathanael Wang Life\n",
+      "derek liang  South\n",
+      "Daniel Kuo South\n",
+      "Taeho Choe South\n",
+      "Grace Sowon Park  South\n",
       "\n",
       "Driver: AZ Ellis South\n",
-      "Maya Habraken  South\n",
-      "Hannah Zhang South\n",
-      "Benjamin Kim South\n",
       "Grace Kwon South\n",
+      "Benjamin Kim South\n",
+      "Hannah Zhang South\n",
+      "Maya Habraken  South\n",
       "\n",
       "Driver: Jocelyn Lee Off\n",
-      "Rachel Kim South\n",
-      "Daniel Kuo South\n",
-      "Kyle Hwang South\n",
-      "Israel Haile South\n",
+      "Darius Ajebon  North\n",
+      "Lucy Han North\n",
+      "Emily Yang North\n",
+      "Daniel Kim  North\n",
       "\n",
       "Driver: Jenny Sohn North\n",
-      "Daniel Song North\n",
-      "Emily Yang North\n",
-      "Lucy Han North\n",
-      "Darius Ajebon  North\n",
+      "Christina Ko Life\n",
+      "Sehyun Jung Life\n",
+      "Grace Park Life\n",
+      "Nathanael Wang Life\n",
       "\n",
       "Driver: Lia kim Off\n",
-      "JJ Lee Life\n",
       "Ethan Yu Life\n",
+      "JJ Lee Life\n",
       "\n",
       "Driver: Josh Paik Off\n",
       "Khang Le Off\n",
@@ -677,8 +674,8 @@
       "helena song North\n",
       "\n",
       "Driver: Matthew Ahn Life\n",
-      "Taeho Choe South\n",
-      "Aaron duong South\n"
+      "Hannah Kim South\n",
+      "Kyle Hwang South\n"
      ]
     }
    ],
@@ -688,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1564,
+   "execution_count": 1581,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1565,
+   "execution_count": 1582,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1566,
+   "execution_count": 1583,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1567,
+   "execution_count": 1584,
    "metadata": {},
    "outputs": [
     {
