implement going back to church algo, map visualization for all coordinates, everything and anything i can think of atm

--- a/greedy_allocate.ipynb
+++ b/greedy_allocate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,15 @@
     "from collections import defaultdict\n",
     "from itertools import combinations\n",
     "import copy\n",
-    "import random\n"
+    "import random\n",
+    "from openpyxl import Workbook\n",
+    "from openpyxl.styles import Font, Alignment, PatternFill\n",
+    "from openpyxl.utils import get_column_letter\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1569,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1570,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1571,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1572,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -80,20 +83,23 @@
      "text": [
       "List of all drivers:\n",
       "\n",
-      "david kim\n",
-      "Clay Murphy\n",
-      "Olivia Chang\n",
-      "Ric Chang\n",
-      "Oriana Tang\n",
-      "Rebecca Lu\n",
       "AZ Ellis\n",
-      "Jack Havemann\n",
+      "Brian Seo\n",
+      "Jonathan Mak\n",
       "Jocelyn Lee\n",
-      "Jenny Sohn\n",
+      "Oriana Tang\n",
+      "Clay Murphy\n",
       "Josh Paik\n",
-      "Lia kim\n",
+      "Olivia Chang\n",
+      "Jack Havemann\n",
+      "Jenny Sohn\n",
+      "david kim\n",
+      "Ric Chang\n",
+      "Daniel Choi\n",
+      "Rebecca Lu\n",
       "Matthew Ahn\n",
-      "Jonathan Mak\n"
+      "Lia kim\n",
+      "Bless Hwang \n"
      ]
     }
    ],
@@ -120,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1573,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1574,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1575,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1576,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46\n",
+      "45\n",
       "unassigned riders: []\n"
      ]
     }
@@ -291,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1577,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -300,13 +306,13 @@
      "text": [
       "\n",
       "Driver: Rebecca Lu Off\n",
-      "Khang Le Off\n",
       "Seojin Kwon Off\n",
+      "Khang Le Off\n",
       "\n",
       "Driver: Oriana Tang Off\n",
       "Sam Ko Off\n",
-      "Faith Chen Off\n",
       "April Tong Off\n",
+      "Kaitlyn Kim Off\n",
       "\n",
       "Driver: Josh Paik Off\n",
       "Jane Yoo Off\n",
@@ -314,64 +320,69 @@
       "Driver: Olivia Chang Life\n",
       "Christina Ko Life\n",
       "Melody Hong Life\n",
-      "Grace Park Life\n",
-      "Nathanael Wang Life\n",
-      "\n",
-      "Driver: david kim Off\n",
-      "Pedro Flores-Teran Off\n",
-      "Shayla Nguyen Off\n",
-      "Austin Lee Off\n",
-      "김예림 Off\n",
-      "\n",
-      "Driver: Clay Murphy Life\n",
-      "Aaron duong South\n",
-      "Ella Lu South\n",
-      "Maya Habraken  South\n",
-      "Grace Kwon South\n",
-      "\n",
-      "Driver: Ric Chang Off\n",
-      "Ella South\n",
-      "Hannah Kim South\n",
-      "Jeffery Huang South\n",
-      "derek liang  South\n",
+      "Sehyun Jung Life\n",
+      "Ethan Yu Life\n",
       "\n",
       "Driver: AZ Ellis South\n",
-      "Elie Park South\n",
-      "Grace Sowon Park  South\n",
-      "Kyle Hwang South\n",
+      "Shayla Nguyen Off\n",
+      "Pedro Flores-Teran Off\n",
+      "Austin Lee Off\n",
+      "Faith Chen Off\n",
+      "\n",
+      "Driver: Brian Seo South\n",
+      "derek liang  South\n",
+      "Aaron duong South\n",
+      "Hyeongjun Son South\n",
       "Benjamin Kim South\n",
       "\n",
-      "Driver: Jocelyn Lee Off\n",
-      "Emily Yang North\n",
-      "Jocelyn Youn North\n",
+      "Driver: Jonathan Mak North\n",
       "helena song North\n",
-      "Darius Ajebon  North\n",
-      "\n",
-      "Driver: Jenny Sohn North\n",
-      "Gabriel Ni North\n",
-      "Lucy Han North\n",
-      "Daniel Kim  North\n",
       "Daniel Song North\n",
+      "Emily Yang North\n",
+      "Daniel Kim  North\n",
       "\n",
-      "Driver: Lia kim Off\n",
-      "Hyeongjun Son South\n",
-      "Joann Jung South\n",
+      "Driver: Jocelyn Lee Off\n",
+      "Grace Kwon South\n",
       "Daniel Kuo South\n",
-      "Hannah Zhang South\n",
+      "Rachel Kim South\n",
+      "Elie Park South\n",
+      "\n",
+      "Driver: Clay Murphy Life\n",
+      "Joann Jung South\n",
+      "Grace Sowon Park  South\n",
+      "Kyle Hwang South\n",
+      "Jeffery Huang South\n",
       "\n",
       "Driver: Jack Havemann Life\n",
-      "Ethan Yu Life\n",
       "Joanna Wei Life\n",
-      "Sehyun Jung Life\n",
+      "Nathanael Wang Life\n",
       "JJ Lee Life\n",
+      "Grace Park Life\n",
+      "\n",
+      "Driver: Jenny Sohn North\n",
+      "Jiwang Lee South\n",
+      "Hannah Kim South\n",
+      "Taeho Choe South\n",
+      "Maya Habraken  South\n",
+      "\n",
+      "Driver: david kim Off\n",
+      "Gabriel Ni North\n",
+      "Lucy Han North\n",
+      "Darius Ajebon  North\n",
+      "Jocelyn Youn North\n",
+      "\n",
+      "Driver: Ric Chang Off\n",
+      "Hannah Zhang South\n",
+      "Israel Haile South\n",
+      "Ella Lu South\n",
+      "\n",
+      "Driver: Daniel Choi Off\n",
       "\n",
       "Driver: Matthew Ahn Life\n",
-      "Jiwang Lee South\n",
-      "Israel Haile South\n",
-      "Rachel Kim South\n",
-      "Taeho Choe South\n",
       "\n",
-      "Driver: Jonathan Mak North\n"
+      "Driver: Lia kim Off\n",
+      "\n",
+      "Driver: Bless Hwang  Off\n"
      ]
     }
    ],
@@ -381,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1578,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,29 +414,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1579,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46\n",
-      "unassigned riders before using flexible: ['Seojin Kwon', 'Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee', 'Daniel Song']\n",
-      "Flexible Driver david kim Flexible 💚\n",
-      "ddd david kim 4 4\n",
-      "ddd david kim 4 4\n",
-      "unassigned riders after using flexible: ['Seojin Kwon', 'Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee', 'Daniel Song']\n",
+      "45\n",
+      "unassigned riders before using flexible: ['Austin Lee', 'Jane Yoo', 'Faith Chen', 'Kaitlyn Kim', 'April Tong', 'Jeffery Huang', 'Lucy Han', 'Joanna Wei']\n",
       "Flexible Driver Clay Murphy Flexible 💚\n",
       "ddd Clay Murphy 4 4\n",
       "ddd Clay Murphy 4 4\n",
-      "unassigned riders after using flexible: ['Seojin Kwon', 'Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee', 'Daniel Song']\n",
+      "unassigned riders after using flexible: ['Austin Lee', 'Jane Yoo', 'Faith Chen', 'Kaitlyn Kim', 'April Tong', 'Jeffery Huang', 'Lucy Han', 'Joanna Wei']\n",
+      "Flexible Driver david kim Flexible 💚\n",
+      "ddd david kim 4 4\n",
+      "ddd david kim 4 4\n",
+      "unassigned riders after using flexible: ['Austin Lee', 'Jane Yoo', 'Faith Chen', 'Kaitlyn Kim', 'April Tong', 'Jeffery Huang', 'Lucy Han', 'Joanna Wei']\n",
       "Flexible Driver Ric Chang Flexible 💚\n",
       "ddd Ric Chang 4 2\n",
-      "Removing rider Seojin Kwon\n",
-      "[DEBUG] Ric Chang got 1 riders of plan 'Flexible 💚' — now has 3 total\n",
-      "unassigned riders after using flexible: ['Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee', 'Daniel Song']\n",
-      "unassigned riders after using flexible: ['Faith Chen', 'Joanna Wei', 'Jane Yoo', 'Jeffery Huang', '김예림', 'Austin Lee', 'Daniel Song']\n"
+      "Removing rider Jane Yoo\n",
+      "Removing rider Lucy Han\n",
+      "[DEBUG] Ric Chang got 2 riders of plan 'Back home 💙' — now has 4 total\n",
+      "unassigned riders after using flexible: ['Austin Lee', 'Faith Chen', 'Kaitlyn Kim', 'April Tong', 'Jeffery Huang', 'Joanna Wei']\n",
+      "[FLEXIBLE FILL] Assigned April Tong to Josh Paik (Lunch 💛)\n",
+      "unassigned riders after using flexible: ['Austin Lee', 'Faith Chen', 'Kaitlyn Kim', 'Jeffery Huang', 'Joanna Wei']\n"
      ]
     }
    ],
@@ -602,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1580,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -611,71 +624,78 @@
      "text": [
       "\n",
       "Driver: Jonathan Mak North\n",
-      "Elie Park South\n",
+      "helena song North\n",
       "\n",
-      "Driver: david kim Off\n",
-      "April Tong Off\n",
-      "Pedro Flores-Teran Off\n",
-      "Shayla Nguyen Off\n",
-      "Sam Ko Off\n",
+      "Driver: AZ Ellis South\n",
+      "Hannah Zhang South\n",
+      "Benjamin Kim South\n",
+      "Grace Kwon South\n",
+      "Maya Habraken  South\n",
       "\n",
-      "Driver: Clay Murphy Life\n",
-      "Joann Jung South\n",
-      "Hyeongjun Son South\n",
-      "Ella Lu South\n",
-      "Ella South\n",
+      "Driver: Brian Seo South\n",
+      "JJ Lee Life\n",
+      "Ethan Yu Life\n",
       "\n",
-      "Driver: Olivia Chang Life\n",
+      "Driver: Jocelyn Lee Off\n",
       "Jiwang Lee South\n",
+      "Hannah Kim South\n",
       "Israel Haile South\n",
-      "Rachel Kim South\n",
-      "Aaron duong South\n",
-      "\n",
-      "Driver: Ric Chang Off\n",
-      "Gabriel Ni North\n",
-      "Jocelyn Youn North\n",
-      "Seojin Kwon Off\n",
+      "Kyle Hwang South\n",
       "\n",
       "Driver: Oriana Tang Off\n",
       "Melody Hong Life\n",
       "\n",
-      "Driver: Rebecca Lu Off\n",
-      "derek liang  South\n",
-      "Daniel Kuo South\n",
-      "Taeho Choe South\n",
-      "Grace Sowon Park  South\n",
-      "\n",
-      "Driver: AZ Ellis South\n",
-      "Grace Kwon South\n",
-      "Benjamin Kim South\n",
-      "Hannah Zhang South\n",
-      "Maya Habraken  South\n",
-      "\n",
-      "Driver: Jocelyn Lee Off\n",
-      "Darius Ajebon  North\n",
-      "Lucy Han North\n",
-      "Emily Yang North\n",
-      "Daniel Kim  North\n",
-      "\n",
-      "Driver: Jenny Sohn North\n",
-      "Christina Ko Life\n",
-      "Sehyun Jung Life\n",
-      "Grace Park Life\n",
-      "Nathanael Wang Life\n",
-      "\n",
-      "Driver: Lia kim Off\n",
-      "Ethan Yu Life\n",
-      "JJ Lee Life\n",
+      "Driver: Clay Murphy Life\n",
+      "Ella Lu South\n",
+      "Joann Jung South\n",
+      "Hyeongjun Son South\n",
+      "Elie Park South\n",
       "\n",
       "Driver: Josh Paik Off\n",
       "Khang Le Off\n",
+      "April Tong Off\n",
+      "\n",
+      "Driver: Olivia Chang Life\n",
+      "Darius Ajebon  North\n",
+      "Daniel Kim  North\n",
+      "Emily Yang North\n",
+      "Daniel Song North\n",
       "\n",
       "Driver: Jack Havemann Life\n",
-      "helena song North\n",
+      "\n",
+      "Driver: Jenny Sohn North\n",
+      "Grace Sowon Park  South\n",
+      "derek liang  South\n",
+      "Daniel Kuo South\n",
+      "Taeho Choe South\n",
+      "\n",
+      "Driver: david kim Off\n",
+      "Seojin Kwon Off\n",
+      "Pedro Flores-Teran Off\n",
+      "Sam Ko Off\n",
+      "Shayla Nguyen Off\n",
+      "\n",
+      "Driver: Ric Chang Off\n",
+      "Gabriel Ni North\n",
+      "Jocelyn Youn North\n",
+      "Jane Yoo Off\n",
+      "Lucy Han North\n",
+      "\n",
+      "Driver: Daniel Choi Off\n",
+      "\n",
+      "Driver: Rebecca Lu Off\n",
+      "Nathanael Wang Life\n",
+      "Christina Ko Life\n",
+      "Grace Park Life\n",
+      "Sehyun Jung Life\n",
       "\n",
       "Driver: Matthew Ahn Life\n",
-      "Hannah Kim South\n",
-      "Kyle Hwang South\n"
+      "Aaron duong South\n",
+      "Rachel Kim South\n",
+      "\n",
+      "Driver: Lia kim Off\n",
+      "\n",
+      "Driver: Bless Hwang  Off\n"
      ]
     }
    ],
@@ -685,49 +705,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1581,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from openpyxl import Workbook\n",
-    "from openpyxl.styles import Font, Alignment, PatternFill\n",
-    "from openpyxl.utils import get_column_letter\n",
-    "\n",
-    "# # Create a new workbook and select the active sheet\n",
-    "# wb = Workbook()\n",
-    "# ws = wb.active\n",
-    "# ws.title = \"My Sheet\"\n",
-    "\n",
-    "# # Write text into specific cells\n",
-    "# ws[\"A1\"] = \"Name\"\n",
-    "# ws[\"B1\"] = \"Score\"\n",
-    "# ws[\"A2\"] = \"Alice\"\n",
-    "# ws[\"B2\"] = 95\n",
-    "# ws[\"A3\"] = \"Bob\"\n",
-    "# ws[\"B3\"] = 88\n",
-    "\n",
-    "# # Apply bold font to headers\n",
-    "# bold_font = Font(bold=True)\n",
-    "# ws[\"A1\"].font = bold_font\n",
-    "# ws[\"B1\"].font = bold_font\n",
-    "\n",
-    "# # Center align header text\n",
-    "# center_alignment = Alignment(horizontal=\"center\")\n",
-    "# ws[\"A1\"].alignment = center_alignment\n",
-    "# ws[\"B1\"].alignment = center_alignment\n",
-    "\n",
-    "# # Set background fill color for header\n",
-    "# header_fill = PatternFill(start_color=\"FFFF00\", end_color=\"FFFF00\", fill_type=\"solid\")\n",
-    "# ws[\"A1\"].fill = header_fill\n",
-    "# ws[\"B1\"].fill = header_fill\n",
-    "\n",
-    "# # Save to file\n",
-    "# # wb.save(\"formatted_output.xlsx\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 1582,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,11 +733,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1583,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def export_assignments_to_excel(rides_to, unassigned_riders_to, rides_from, unassigned_riders_from, output_filename=\"ride_assignments.xlsx\"):\n",
+    "def export_assignments_to_excel(rides_to, unassigned_riders_to, rides_from, unassigned_riders_from, output_filename=\"greedy_allocate.xlsx\"):\n",
     "    wb = Workbook()\n",
     "    ws = wb.active\n",
     "    ws.title = \"Ride Assignments\"\n",
@@ -800,7 +785,7 @@
     "                col += 1\n",
     "            curr_car_count += 1\n",
     "\n",
-    "        if unassigned_riders:\n",
+    "        if unassigned_riders or :\n",
     "            col += 1\n",
     "            driver_cell = ws.cell(row=row, column=col, value=\"UNASSIGNED DRIVERS\")\n",
     "            driver_cell.fill = PatternFill(start_color=\"FFCCCCCC\", end_color=\"FFCCCCCC\", fill_type=\"solid\")\n",
@@ -830,6 +815,7 @@
     "        return local_used_cols\n",
     "\n",
     "    # Define sort and color strategies\n",
+    "    sort_by_service_then_pickup = lambda obj: (obj.service_type, obj.pickup_location.split()[0])\n",
     "    sort_by_pickup = lambda obj: obj.pickup_location.split()[0]\n",
     "    sort_by_plans = lambda obj: obj.plans\n",
     "    color_by_pickup = lambda obj: obj.pickup_location.split()[0]\n",
@@ -841,7 +827,7 @@
     "        unassigned_riders_to,\n",
     "        start_col=3,\n",
     "        key_col=2,\n",
-    "        sort_key_driver=sort_by_pickup,\n",
+    "        sort_key_driver=sort_by_service_then_pickup,\n",
     "        sort_key_rider=sort_by_pickup,\n",
     "        driver_color_key=color_by_pickup,\n",
     "        rider_color_key=color_by_pickup,\n",
@@ -878,14 +864,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Excel file saved to ride_assignments.xlsx\n"
+      "Excel file saved to greedy_allocate.xlsx\n"
      ]
     }
    ],
